@@ -546,3 +546,6 @@ in 0.1.13.
 
 0.1.43
 ------
+- Store the fname as a PurePath in Data1D. This is because pickled datafiles
+  from one OS may not be unpickleable on another OS. e.g. Posix can't unpickle
+  WindowsPath and vice versa.
